22 [Nagaraj/Kales] Fixing infra box - docker image not found - Created new image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 defaults: &defaults
   docker:
-  - image: timjdfletcher/infrabox
+  - image: kaleeaswari/infrabox
   working_directory: /home/circleci/project
 
 version: 2
