--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,8 +29,9 @@ jobs:
                  ./scripts/run_terraform.sh $TRAINING_COHORT base_networking apply -input=false -auto-approve;
                  ./scripts/run_terraform.sh $TRAINING_COHORT bastion apply -input=false -auto-approve;
                  ./scripts/run_terraform.sh $TRAINING_COHORT training_bucket apply -input=false -auto-approve;
-                 ./scripts/run_terraform.sh $TRAINING_COHORT training_airflow apply -input=false -auto-approve;
                  ./scripts/run_terraform.sh $TRAINING_COHORT training_emr_cluster apply -input=false -auto-approve -var-file=prod-env.tfvars;
+                 ./scripts/run_terraform.sh $TRAINING_COHORT training_airflow apply -input=false -auto-approve;
+                 ./scripts/run_terraform.sh $TRAINING_COHORT emr_sg_update apply -input=false -auto-approve;
                  ./scripts/run_terraform.sh $TRAINING_COHORT training_kafka apply -input=false -auto-approve -var-file=prod-env.tfvars;
                  ./scripts/run_terraform.sh $TRAINING_COHORT ingester apply -input=false -auto-approve -var-file=prod-env.tfvars;
                  ./scripts/run_terraform.sh $TRAINING_COHORT monitoring_dashboard apply -input=false -auto-approve;
@@ -63,8 +64,9 @@ jobs:
                  ./scripts/run_terraform.sh $TRAINING_COHORT monitoring_dashboard destroy -input=false -auto-approve;
                  ./scripts/run_terraform.sh $TRAINING_COHORT ingester destroy -input=false -auto-approve -var-file=prod-env.tfvars ;
                  ./scripts/run_terraform.sh $TRAINING_COHORT training_kafka destroy -input=false -auto-approve -var-file=prod-env.tfvars ;
-                 ./scripts/run_terraform.sh $TRAINING_COHORT training_emr_cluster destroy -input=false -auto-approve -var-file=prod-env.tfvars ;
+                 ./scripts/run_terraform.sh $TRAINING_COHORT emr_sg_update destroy -input=false -auto-approve -var-file=prod-env.tfvars ;
                  ./scripts/run_terraform.sh $TRAINING_COHORT training_airflow destroy -input=false -auto-approve;
+                 ./scripts/run_terraform.sh $TRAINING_COHORT training_emr_cluster destroy -input=false -auto-approve;
                  ./scripts/run_terraform.sh $TRAINING_COHORT training_bucket destroy -input=false -auto-approve;
                  ./scripts/run_terraform.sh $TRAINING_COHORT bastion destroy -input=false -auto-approve;
                  ./scripts/run_terraform.sh $TRAINING_COHORT base_networking destroy -input=false -auto-approve;
