--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -138,4 +138,4 @@ workflows:
       - firstTimeSetup:
           context: production
           requires:
-            - approvefirstTimeSetup
+            - approvefirstTimeSetupProd
