--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,12 +76,75 @@ workflows:
   build:
     jobs:
       - dummy
+      - approveQAEnvSetup:
+          context: qa
+          type: approval
+          requires:
+            - dummy
+      - approvefirstTimeQASetup:
+          context: qa
+          type: approval
+          requires:
+            - approveQAEnvSetup
+
+      - firstTimeSetup:
+          context: qa
+          requires:
+            - approvefirstTimeQASetup
+
+      - approvebuildQAAMIs:
+          context: qa
+          type: approval
+          requires:
+            - approveQAEnvSetup
+
+      - buildAMIs:
+          context: qa
+          requires:
+            - approvebuildQAAMIs
+      - approveBuildEnvironmentQA:
+          context: qa
+          type: approval
+          requires:
+            - approveQAEnvSetup
+
+      - buildEnvironment:
+          name: qaEnvironmentSetup
+          context: qa
+          requires:
+            - approveBuildEnvironmentQA
+
+      - approvebuildQAClientVPN:
+          context: qa
+          type: approval
+          requires:
+            - approveQAEnvSetup
+      - buildClientVPN:
+          context: qa
+          requires:
+            - approvebuildQAClientVPN
+
+      - approveDestroyQAEnvironment:
+          context: qa
+          type: approval
+          requires:
+            - approveQAEnvSetup
+      - destroyEnvironment:
+          context: qa
+          requires:
+            - approveDestroyQAEnvironment
+
+
+      # Test environment setup starts here.
+
       - approveTestEnvSetup:
+          context: test
           type: approval
           requires:
             - dummy
 
       - approvefirstTimeSetup:
+          context: test
           type: approval
           requires:
             - approveTestEnvSetup
@@ -91,6 +154,7 @@ workflows:
             - approvefirstTimeSetup
 
       - approvebuildAMIs:
+          context: test
           type: approval
           requires:
             - approveTestEnvSetup
@@ -100,6 +164,7 @@ workflows:
             - approvebuildAMIs
 
       - approveBuildEnvironmentTest:
+          context: test
           type: approval
           requires:
             - approveTestEnvSetup
@@ -110,6 +175,7 @@ workflows:
             - approveBuildEnvironmentTest
 
       - approvebuildClientVPN:
+          context: test
           type: approval
           requires:
             - approveTestEnvSetup
@@ -119,6 +185,7 @@ workflows:
             - approvebuildClientVPN
 
       - approveDestroyEnvironment:
+          context: test
           type: approval
           requires:
             - approveTestEnvSetup
@@ -126,13 +193,15 @@ workflows:
           context: test
           requires:
             - approveDestroyEnvironment
-                  
+      # Production workflow begin here...
       - approveProdEnvSetup:
+          context: production
           type: approval
           requires:
             - testEnvironmentSetup
 
       - approvefirstTimeSetupProd:
+          context: production
           type: approval
           requires:
             - approveProdEnvSetup
@@ -142,6 +211,7 @@ workflows:
             - approvefirstTimeSetupProd
 
       - approvebuildAMIsProd:
+          context: production
           type: approval
           requires:
             - approveProdEnvSetup
@@ -151,6 +221,7 @@ workflows:
             - approvebuildAMIsProd
 
       - approveBuildEnvironmentProd:
+          context: production
           type: approval
           requires:
             - approveProdEnvSetup
@@ -161,6 +232,7 @@ workflows:
             - approveBuildEnvironmentProd
 
       - approvebuildClientVPNProd:
+          context: production
           type: approval
           requires:
             - approveProdEnvSetup
@@ -170,6 +242,7 @@ workflows:
             - approvebuildClientVPNProd
 
       - approveDestroyEnvironmentProd:
+          context: production
           type: approval
           requires:
             - approveProdEnvSetup
