[#11] [Nisha/Sanjeev] Directs prod env setup after dummy.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -130,7 +130,7 @@ workflows:
       - approveProdEnvSetup:
           type: approval
           requires:
-            - testEnvironmentSetup
+            - dummy
 
       - approvefirstTimeSetupProd:
           type: approval
