[#8][Pooja & Dongyu] change pipeline dependency

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -139,7 +139,7 @@ workflows:
       - approveProdEnvSetup:
           type: approval
           requires:
-            - qaEnvironmentSetup
+            - dummy
 
       - approvefirstTimeSetupProd:
           type: approval
